# node-health-monitor

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: CHANGELOG.md  CONTRIBUTING.md
docs/images/: .gitkeep
examples/: homelab.yaml
examples/remediation/: cleanup-disk.sh  cleanup-memory.sh
src/node_health_monitor/: __init__.py  cli.py  config.py  models.py  monitor.py
src/node_health_monitor/collectors/: __init__.py  base.py  local.py  ssh.py
src/node_health_monitor/dashboard/: __init__.py  app.py
src/node_health_monitor/dashboard/templates/: index.html
src/node_health_monitor/notifiers/: __init__.py  base.py  slack.py  telegram.py  webhook.py
src/node_health_monitor/remediation/: __init__.py  handler.py
tests/: __init__.py  test_collectors.py  test_config.py  test_models.py
